<?xml version="1.0" encoding="utf-8"?>
<resources>
	
	<string name="home">Home</string>
	<string name="imgAccount">Account</string>
	<string name="imgAccount1">Account</string>
	
	<string name="app_CreateAccount">Add your Account</string>
	<string name="app_trans">Transaction</string>
	<string name="app_transd">Summary</string>
	
	<string name="acnt">Account</string>
	<string name="tran">Transfer</string>
	<string name="sum">Summary</string>
	<string name="wrad">Deposit-Withdrawal</string>
	
	
	
    <string name="app_name">Transfer Amount</string>
    <string name="action_settings">Settings</string>
    <string name="transhead">Transfer Amount</string>
    <string name="transTo">To</string>
    <string name="transFrom">From</string>
    <string name="transAmount">Amount</string>
    <string name="transBtnDate">Date</string>
    <string name="transDesciption">Description</string>
    <string name="transBtnTransfer">Transfer Amount</string>
    <string name="transMode">Select Mode</string>
    <string name="transRef">Transfer Ref no.</string>
    
    
    
    
    <string name="textAccount">Select Your Account</string>
    <string name="textBalance">Current Balance</string>
    <string name="select">-- Please Select -- </string>
    <string name="amount">Amount </string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="deposit">Deposit</string>
    <string name="withdrawal">Withdrawal</string>
    <string name="description">Description</string>
    <string name="add">ADD</string>
    <string name="mode">Select Mode</string>
    <string name="reference">Trans Ref No.</string>
    <string name="title_activity_transaction_details">Transaction Summary</string>
    <string name="nameAccount">Account Name</string>
    <string name="textSearch">Search By</string>
    <string name="deleteAll">Delete All</string>
    <string name="searchHint">Search By</string>
    <string name="search">Search</string>
    
    
    
    
    
    <string name="accno">Account No:</string>
    <string name="accname">Account Name:</string>
    <string name="bankname">Bank Name:</string>
    <string name="currbal">Current Balance:</string>
    <string name="dateop">Date Of Opening:</string>
    <string name="type">Type:</string>
    <string name="rsaving">Saving</string>
    <string name="rcurrent">Current</string>
    <string name="save">Save</string>
    <string name="cal">Calendar</string>
    <string name="details">Add More</string>

</resources>