<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_margin="2dp"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/transTo"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/transTo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapWords" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:text="@string/transFrom"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/transFrom"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapWords" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:text="@string/transAmount"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/transAmount"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="number" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/transDate"
            android:layout_width="255dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:enabled="false"
            android:inputType="date"
            android:textColor="#999" />

        <ImageButton
            android:id="@+id/transBtnDate"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="0dp"
            android:background="#fff"
            android:contentDescription="@string/transBtnDate"
            android:scaleType="fitCenter"
            android:src="@drawable/iconcl" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="0dp"
            android:text="@string/transMode"
            android:textSize="15sp" />

        <Spinner
            android:id="@+id/transMode"
            android:layout_width="210dp"
            android:layout_height="40dp"
            android:layout_margin="0dp" />
    </LinearLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/transRef"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/transedtRef"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="number" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:text="@string/transDesciption"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/transDesciption"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:inputType="text"
        android:maxLines="20" />

    <Button
        android:id="@+id/transBtnTransfer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:text="@string/transBtnTransfer" />

</LinearLayout>