<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TransactionDetails" >

    <TextView
        android:id="@+id/textAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip"
        android:layout_marginTop="25dip"
        android:text="@string/textAccount" />

    <Spinner
        android:id="@+id/spinnerAccount"
        android:layout_width="150dip"
        android:layout_height="40dip"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="10dip"
        android:layout_marginTop="20dip"
        android:layout_toRightOf="@+id/textAccount"
        android:prompt="@string/select" />

    <TableLayout
        android:id="@+id/transactionDetails"
        android:layout_width="fill_parent"
        android:layout_height="300dip"
        android:layout_below="@+id/textAccount"
        android:layout_marginLeft="5dip"
        android:layout_marginRight="5dip"
        android:layout_marginTop="30dip"
        android:background="#FFFFFF" >

        <TableRow
            android:id="@+id/header"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dip"
            android:layout_marginRight="5dip"
            android:layout_marginTop="5dip"
            android:background="#E8E8E8" >

            
            <ListView 
                android:id="@+id/listView"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                />
            <TextView 
                android:id="@+id/txtforlist"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textIsSelectable="true"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dip"
                android:text="@string/nameAccount" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dip"
                android:layout_marginRight="30dip"
                android:text="@string/amount" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dip"
                android:layout_marginRight="10dip"
                android:text="@string/date" />
            
        </TableRow>
    </TableLayout>

    <EditText
        android:id="@+id/editSearch"
        android:layout_width="114dip"
        android:layout_height="40dip"
        android:layout_below="@+id/transactionDetails"
        android:layout_marginLeft="5dip"
        android:layout_marginTop="0dip"
        android:hint="@string/searchHint"
        android:inputType="text" />

    <Spinner
        android:id="@+id/spinnerOrderBy"
        android:layout_width="120dip"
        android:layout_height="40dip"
        android:layout_below="@+id/transactionDetails"
        android:layout_marginLeft="4dip"
        android:layout_marginRight="4dip"
        android:layout_marginTop="0dip"
        android:layout_toRightOf="@+id/editSearch"
        android:prompt="@string/select" />

    <Button
        android:id="@+id/searchButton"
        android:layout_width="50dip"
        android:layout_height="40dip"
        android:layout_below="@+id/transactionDetails"
        android:layout_marginLeft="10dip"
        android:layout_marginTop="0dip"
        android:layout_toRightOf="@+id/spinnerOrderBy"
        android:background="@drawable/search"
        android:contentDescription="@string/search" />

    <Button
        android:id="@+id/deleteAll"
        android:layout_width="200dip"
        android:layout_height="40dip"
        android:layout_below="@+id/editSearch"
        android:layout_marginLeft="50dip"
        android:layout_marginRight="50dip"
        android:layout_marginTop="0dip"
        android:text="@string/deleteAll" />

</RelativeLayout>