<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".CreateAccount"
    android:layout_margin="0dp"
     >

    <TextView 
        android:id="@+id/accno"
        android:layout_width="95dp"
        android:layout_height="wrap_content"
        android:text="@string/accno"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:textSize="12sp"
        />
    <TextView 
        android:id="@+id/accname"
        android:layout_width="95dp"
        android:layout_height="wrap_content"
        android:text="@string/accname"
        android:layout_below="@+id/accNo"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:textSize="12sp"
        
        />
    <TextView 
        android:id="@+id/bankname"
        android:layout_width="95dp"
        android:layout_height="wrap_content"
        android:text="@string/bankname"
        android:layout_below="@+id/accName"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:textSize="12sp"
        />
    <TextView 
        android:id="@+id/currbal"
        android:layout_width="95dp"
        android:layout_height="wrap_content"
        android:text="@string/currbal"
        android:layout_below="@+id/bankName"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:textSize="12sp"
        />
    <TextView 
        android:id="@+id/dateop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dateop"
        android:layout_below="@+id/currBal"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:textSize="12sp"
        />
    
        
    <EditText 
        android:id="@+id/accNo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint=""
        android:inputType="number"
        android:layout_toRightOf="@+id/accno"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="10dp"
        />
    <EditText 
        android:id="@+id/accName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint=""
        android:layout_toRightOf="@+id/accname"
        android:layout_below="@+id/accNo"
        android:inputType="textCapWords"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="10dp"
        />
    <EditText 
        android:id="@+id/bankName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint=""
        android:inputType="textCapWords"
        android:layout_toRightOf="@+id/bankname"
        android:layout_below="@+id/accName"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="10dp"
        />
    <EditText 
        android:id="@+id/currBal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint=""
        android:layout_toRightOf="@+id/currbal"
        android:layout_below="@+id/bankName"
        android:inputType="number"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="10dp"
        />
    <EditText 
        android:id="@+id/dateOp"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:hint=""
        android:layout_toRightOf="@+id/dateop"
        android:layout_below="@+id/currBal"
        android:inputType="date"
        android:layout_marginLeft="5dp"
        android:layout_marginBottom="10dp"
        />
    <ImageButton 
        android:id="@+id/cal"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:src="@drawable/calendar"
        android:contentDescription="@string/cal"
        android:layout_below="@+id/currBal"
        android:layout_toRightOf="@+id/dateOp"
        />
    
    <RadioGroup 
        android:id="@+id/rgtype"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dateOp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="10dp"
        >
        <RadioButton 
            android:id="@+id/rsaving"
            android:text="@string/rsaving"
            android:layout_width="150dp"
            />
        <RadioButton 
            android:id="@+id/rcurrent"
            android:text="@string/rcurrent"
            android:layout_width="150dp"
            />
    </RadioGroup>
    <Button 
        android:id="@+id/save"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:layout_below="@+id/rgtype"
        />

    <Button
        android:id="@+id/details"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/details"
        android:layout_toRightOf="@+id/save" 
        android:layout_below="@+id/rgtype"
        />

</RelativeLayout>
