<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Transaction" >

    <TextView
        android:id="@+id/textAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textAccount"
        android:layout_marginLeft="5dip"
        android:layout_marginTop="5dip" />
    <TextView 
        android:id="@+id/textBalance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dip"
        android:layout_marginLeft="50dip"
        android:layout_marginRight="5dip"
        android:layout_toRightOf="@+id/textAccount"
        android:text="@string/textBalance"/>
    <Spinner 
        android:id="@+id/spinnerAccount"
        android:layout_width="150dip"
        android:layout_height="40dip"
        android:layout_below="@+id/textAccount"
        android:layout_marginTop="3dip"
        android:layout_marginLeft="5dip"
        android:prompt="@string/select"/>
    <EditText 
        android:id="@+id/editBalance"
        android:layout_width="120dip"
        android:layout_height="40dip"
        android:layout_toRightOf="@+id/spinnerAccount"
        android:layout_below="@+id/textBalance"
        android:layout_marginTop="3dip"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="5dip"
        android:inputType="numberDecimal"
        android:enabled="false"
        android:textSize="15sp"
        />
    <TextView 
        android:id="@+id/textAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip"
        android:layout_marginTop="20dip"
        android:layout_below="@+id/spinnerAccount"
        android:text="@string/amount"/>
    <EditText 
        android:id="@+id/editAmount"
        android:layout_width="200dip"
        android:layout_height="40dip"
        android:inputType="numberDecimal"
        android:layout_marginLeft="20dip"
        android:layout_marginTop="15dip"
        android:layout_marginRight="5dip"
        android:layout_below="@+id/editBalance"
        android:layout_toRightOf="@+id/textAmount"
        android:textSize="15sp"/>
    <TextView 
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dip"
        android:layout_marginLeft="10dip"
        android:layout_below="@+id/textAmount"
        android:text="@string/date"
        />
    <EditText 
        android:id="@+id/editDate"
        android:layout_width="150dip"
        android:layout_height="40dip"
        android:inputType="date"
        android:layout_below="@+id/textAmount"
        android:layout_toRightOf="@+id/date"
        android:layout_marginLeft="40dip"
        android:layout_marginTop="25dip"
        android:textSize="15sp"
        />
    <ImageButton 
        android:id="@+id/dateButton"
        android:layout_width="50dip"
        android:layout_height="40dip"
        android:layout_marginLeft="10dip"
        android:layout_marginTop="10dip"
        android:layout_marginRight="5dip"
        android:layout_below="@+id/editAmount"
        android:layout_toRightOf="@+id/editDate"
        android:contentDescription="@string/date"
        />
    
    <TextView 
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dip"
        android:layout_marginLeft="10dip"
        android:layout_below="@+id/date"
        android:text="@string/time"/>
    <EditText
        android:id="@+id/editTime"
        android:layout_width="150dip"
        android:layout_height="40dip"
        android:layout_below="@+id/date"
        android:layout_toRightOf="@+id/time"
        android:layout_marginTop="25dip"
        android:layout_marginLeft="40dip"
        android:inputType="time"
        android:textSize="15sp" 
        />
     <ImageButton 
        android:id="@+id/timeButton"
        android:layout_width="50dip"
        android:layout_height="40dip"
        android:layout_marginLeft="10dip"
        android:layout_marginTop="10dip"
        android:layout_marginRight="5dip"
        android:layout_below="@+id/editDate"
        android:layout_toRightOf="@+id/editTime"
        android:contentDescription="@string/time"
        />
    
     <RadioGroup
         android:id="@+id/transaction" 
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:layout_below="@+id/time"
         android:layout_marginTop="20dip"
         android:layout_marginLeft="5dip">
         
         <RadioButton 
             android:id="@+id/deposit"
             android:text="@string/deposit"
             android:onClick="onTransactionClicked"/>
         <RadioButton 
             android:id="@+id/withdrawal"
             android:text="@string/withdrawal"
             android:layout_marginLeft="50dip"
             android:onClick="onTransactionClicked"/>
     </RadioGroup>
     
     <TextView 
         android:id="@+id/mode"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/transaction"
         android:text="@string/mode"
         android:layout_marginLeft="10dip"
         android:layout_marginTop="15dip"/>
      <Spinner 
         android:id="@+id/spinnerMode"
         android:layout_width="175dip"
         android:layout_height="40dip"
         android:prompt="@string/select"
         android:layout_toRightOf="@+id/mode"
         android:layout_below="@+id/transaction"
         android:layout_marginLeft="20dip"
         android:layout_marginTop="5dip"
         android:layout_marginRight="5dip"/>
      <TextView
          android:id="@+id/reference"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/reference"
          android:layout_below="@+id/mode"
          android:layout_marginTop="30dip"
          android:layout_marginLeft="10dip">
          
      </TextView>
      <EditText 
          android:id="@+id/editReference"
          android:layout_width="170dip"
          android:layout_height="40dip"
          android:inputType="number"
          android:layout_below="@+id/spinnerMode"
          android:layout_toRightOf="@+id/reference"
          android:layout_marginLeft="15dip"
          android:layout_marginTop="10dip"
          android:layout_marginRight="5dip"/>
     <TextView 
         android:id="@+id/description"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/description"
         android:layout_marginLeft="10dip"
         android:layout_marginTop="20dip"
         android:layout_below="@+id/reference"
         />
    
     <EditText 
         android:id="@+id/editDescription"
         android:layout_width="180dip"
         android:layout_height="60dip"
         android:scrollbars="vertical"
         android:inputType="text"
         android:enabled="true"
         android:layout_below="@+id/description"
         android:layout_marginLeft="10dip"
         android:layout_marginTop="10dip"/>

     <Button
         android:id="@+id/addButton"
         android:layout_width="100dip"
         android:layout_height="50dip"
         android:layout_alignRight="@+id/spinnerMode"
         android:layout_below="@+id/description"
         android:text="@string/add" />

</RelativeLayout>